--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,29 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <nav class="navbar navbar-inverse navbar-fixed-top">
+      <div class="container">
+        <div class="navbar-header">
+          <button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          <a href="#" title="TileSport" class="navbar-brand navbar-right">TileSport</a>
+        </div>
+        <div class="collapse navbar-collapse">
+          <ul class="nav navbar-left navbar-nav">
+            <li><%= link_to "PETSHOPS", root_url %></li>
+          </ul>
+        </div>
+      </div>
+    </header><!-- /header -->
+
+    <div class="container">
+      <div class="row">
+        <%= yield %>
+      </div>
+    </div>
   </body>
 </html>
