--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,3 +19,12 @@
 body {
   padding-top: 70px;
 }
+.turbolinks-progress-bar {
+  height: 23px;
+  background-color: green;
+}
+
+.table-index {
+  font-size: 15px;
+  padding-top: 20px;
+}
