--- a/app/views/dogs/index.html.erb
+++ b/app/views/dogs/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-12">
-  <h1><%= t('.title') %></h1>
+  <h1 class="text-center"><%= t('.title') %></h1>
 
   <%= render 'search_form' %>
 
