--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,8 +20,8 @@ body {
   padding-top: 70px;
 }
 .turbolinks-progress-bar {
-  height: 23px;
-  background-color: green;
+  height: 10px;
+  background-color: blue;
 }
 
 .table-index {
