--- a/app/views/dogs/show.html.erb
+++ b/app/views/dogs/show.html.erb
@@ -1,7 +1,7 @@
 <p id="notice"><%= notice %></p>
 <div class="row" style="padding-top: 50px">
   <div class="col-md-3">
-    <%= image_tag("dog-avatar", size: '220x220') %>
+    <%= image_tag("dog-avatar.jpg", size: '220x220') %>
    </div>
   <div class="col-md-9">
     <p>
